fixed contact cutoff and added animation for portfolio page

--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,9 @@ a {
 		min-height: 100%;
 		height: min-content;
 		max-width: 100vw;
+
+		opacity: 0;
+		transition-duration: 200ms;
 	}
 	.active-page {
 		display: flex !important;
@@ -468,7 +471,7 @@ a {
 	#contact {
 		display: flex;
 		flex-direction: column;
-		justify-content: flex-start;
+		justify-content: center;
 		align-items: center;
 		height: min-content;
 		overflow-y: hidden;
